--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,3 +146,20 @@ h1 small {
 .pagination-container {
     text-align: center;
 }
+
+.card-img {
+    width: 100%;
+    height: 150px;
+    background-color: #e6e6e6;
+    border-radius: 0;
+    background-position: center center;
+    background-size: cover;
+}
+
+.card-block-title {
+    margin: 0;
+}
+
+.card-block-footer {
+    padding: 0 1.25rem 1.25rem;
+}
