--- a/public/css/main.css
+++ b/public/css/main.css
@@ -163,3 +163,46 @@ h1 small {
 .card-block-footer {
     padding: 0 1.25rem 1.25rem;
 }
+
+.orchid-detail-image {
+    background-color: #777;
+    /*background-image: url(http://www.aos.org/AOS/media/Content-Images/Orchids/orchid-care-phal.jpg);*/
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    height: 350px;
+}
+
+.orchid-detail-image-bottom,
+.orchid-detail-image-top {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    color: #fff;
+}
+
+.orchid-detail-image-top {
+    top: 0;
+    background: linear-gradient(to top, transparent, rgba(0, 0, 0, .7) 90%);
+}
+
+.orchid-detail-image-bottom {
+    bottom: 0;
+    background: linear-gradient(transparent, rgba(0, 0, 0, .7) 90%);
+}
+
+.orchid-detail-box {
+    padding: 20px 0;
+}
+
+.orchid-detail-code {
+    display: inline-block;
+    text-align: center;
+    margin-right: 20px;
+}
+
+.orchid-detail-code img {
+    width: 150px;
+    height: 150px;
+}
